  - Fix data to be munged into a saner form so that we get the data
    type information, the hostname and other metadata.

0.002
  - Fix important error in the SYNOPSIS for configuring outputs.

0.001
  - First version released on the the unsuspecting world.
