@@ -6,7 +6,8 @@ DESCRIPTION
     This package is a placeholder for adaptors between Message::Passing and
     collectd <http://collectd.org>.
 
-    Please see Collectd::Plugin::Write::Message::Passing
+    Please see Collectd::Plugin::Write::Message::Passing (known working) and
+    Collectd::Plugin::Read::Message::Passing (sketch currently).
 
 AUTHOR
     Tomas Doran (t0m) "<bobtfish@bobtfish.net>"
