@@ -7,6 +7,7 @@ use Test::More 0.88;
 use MockCollectd;
 
 use_ok 'Collectd::Plugin::Write::Message::Passing';
+use_ok 'Collectd::Plugin::Read::Message::Passing';
 use_ok 'Message::Passing::Collectd';
 
 done_testing;
